--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Email List</title>
+
 </head>
 
-<body>
+
+<body class="bg-info-subtle">
+    <div class="container my-5">
+        <div class="card" style="width: 35rem; margin: auto;">
+            <h1 class="text-center w-100 mt-3 text-primary">LISTA EMAIL</h1>
+            <img src="./img/mailPhoto.jpg" style="width: 300px;" class="card-img-top mx-auto d-block" alt="mailPhoto">
+            <div class="card-body pt-0">
+                <ul id="email" class="list-group w-50 mx-auto mb-4"></ul>
+                <button id="refresh" type="button" class="btn btn-primary mx-auto d-block">Refresh Email</button>
+            </div>
+        </div>
+    </div>
+
+
+
 
 
 
